<resources>
    <string name="app_name">ViewMyLog</string>
    <string name="title_activity_settings">Einstellungen</string>
    <string name="title_activity_logview">ViewMyLog</string>

    <!-- Preference Titles -->
    <string name="appearance_header">Aussehen PopupWindow</string>
    <string name="filter_header">Log Filter</string>
    <string name="callback_header">Callback-Aufrufe</string>

    <!-- PopupWindow Preferences -->
    <string name="opacity_title">Deckkraft</string>
    <string name="size_title">Größe des Fensters</string>
    <string name="textsize_title">Textgröße</string>
    <string name="default_textsize">12</string>

    <!-- Filter Preferences -->
    <string name="negative_logfilter_title">Logs mit diesen Tags nicht anzeigen</string>
    <string name="loglevel_title">Log Level</string>

    <!-- Callback Preferences -->
    <string name="log_callback_title">Callbackmethoden-Aufrufe zuzätzlich loggen</string>
    <string name="log_callback_tag_title">Tag des Logs</string>

    <!-- Toast Preferences -->
    <string name="toast">Toast</string>
    <string name="log_Toast_title">Log-Meldungen als Toast-Nachricht ausgeben</string>

    <!-- Sonstige Strings -->
    <string name="filter">Filter</string>
    <string name="stopRead">Pause</string>
    <string name="continueRead">Weiter</string>
    <string name="save">Speichern</string>
    <string name="delete">Löschen</string>
    <string name="einstellungen">Einstellungen</string>
    <string name="lifecycle_track">Lifecycle Track</string>
    <string name="popupwindow">PopupWindow</string>
    <string name="logactivity">LogActivity</string>
    <string name="filter_hinzufuegen">Filter hinzufügen...</string>
    <string name="app_logs">App Logs</string>
    <string name="autoscroll">Autoscroll</string>

</resources>
