<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        app:title="@string/appearance_header"
        app:iconSpaceReserved="false">

        <SeekBarPreference
            app:key="pwOpacity"
            app:showSeekBarValue="true"
            app:min="1"
            android:max="100"
            app:defaultValue="100"
            app:title="@string/opacity_title"
            app:icon="@drawable/ic_opacity_black_24dp"
            >
        </SeekBarPreference>

        <ListPreference
            app:defaultValue="2"
            app:entries="@array/pw_textsize_entries"
            app:entryValues="@array/pw_textsize_values"
            app:key="pwTextSize"
            app:title="@string/textsize_title"
            app:useSimpleSummaryProvider="true"
            app:icon="@drawable/ic_format_size_black_24dp"/>

        <ListPreference
            app:defaultValue="2"
            app:entries="@array/pw_size_entries"
            app:entryValues="@array/pw_size_values"
            app:key="pwSize"
            app:title="@string/size_title"
            app:useSimpleSummaryProvider="true"
            app:icon="@drawable/ic_format_shapes_black_24dp"/>



    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/toast"
        app:iconSpaceReserved="false">

        <SwitchPreference
            app:key="logToast"
            app:title="@string/log_Toast_title"
            app:defaultValue="false"
            app:icon="@drawable/ic_toast"
            >

        </SwitchPreference>

        <EditTextPreference
            app:key="logToastTag"
            app:title="@string/log_callback_tag_title"
            app:dependency="logToast"
            android:defaultValue="tag"
            app:useSimpleSummaryProvider="true"
            app:icon="@drawable/ic_edit_black_24dp">

        </EditTextPreference>

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/filter_header"
        app:iconSpaceReserved="false">

        <com.thk.viewmylog.helper.LogFilterPreference
            app:key="negativeLogFilter"
            app:title="@string/negative_logfilter_title"
            android:singleLineTitle="true"
            app:icon="@drawable/ic_filter_list_black_24dp"
            />

        <MultiSelectListPreference
            app:title="@string/loglevel_title"
            app:key="logLevel"
            android:entries="@array/loglevel_entries"
            android:defaultValue="@array/loglevel_values"
            android:entryValues="@array/loglevel_values"
            app:icon="@drawable/ic_filter_list_black_24dp">

        </MultiSelectListPreference>

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/callback_header"
        app:iconSpaceReserved="false">

        <SwitchPreference
            app:key="logCallback"
            app:title="@string/log_callback_title"
            app:defaultValue="false"
            app:icon="@drawable/ic_log_black_24dp"
            >

        </SwitchPreference>

        <EditTextPreference
            app:key="logCallbackTag"
            app:title="@string/log_callback_tag_title"
            app:dependency="logCallback"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="lifecycleEvent"
            app:icon="@drawable/ic_edit_black_24dp">

        </EditTextPreference>

    </PreferenceCategory>

</PreferenceScreen>
